<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FecharCaixaActivity">

    <TextView
        android:id="@+id/txtTotalDia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:text="@string/total_dia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTotalMes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:text="@string/total_mes"
        app:layout_constraintStart_toStartOf="@+id/txtTotalDia"
        app:layout_constraintTop_toBottomOf="@+id/txtTotalDia" />

    <TableLayout
        android:id="@+id/tbTotalDia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtClientesDia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numero_clientes"
                android:textColor="@color/numreo_clientes" />

            <TextView
                android:id="@+id/txtClientesDia3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fechamento_num_margin"
                android:text="000" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtPgtoCredito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pgto_credito" />

            <TextView
                android:id="@+id/txtClientesDia6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fechamento_num_margin"
                android:text="000" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtPgtoDebito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pgto_debito" />

            <TextView
                android:id="@+id/txtClientesDia7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fechamento_num_margin"
                android:text="000" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtPgtoDinheiro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pgto_dinheiro" />

            <TextView
                android:id="@+id/txtClientesDia8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fechamento_num_margin"
                android:text="000" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtCaixaAtual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/caixa" />

            <TextView
                android:id="@+id/txtClientesDia11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fechamento_num_margin"
                android:text="000" />

        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/tbTotalMes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tbTotalDia">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtClientesMes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numero_clientes"
                android:textColor="@color/numreo_clientes" />

            <TextView
                android:id="@+id/txtClientesDia10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fechamento_num_margin"
                android:layout_marginRight="@dimen/fechamento_num_margin"
                android:text="000" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pgto_credito" />

            <TextView
                android:id="@+id/txtClientesDia12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fechamento_num_margin"
                android:layout_marginRight="@dimen/fechamento_num_margin"
                android:text="000" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pgto_debito" />

            <TextView
                android:id="@+id/txtClientesDia13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fechamento_num_margin"
                android:layout_marginRight="@dimen/fechamento_num_margin"
                android:text="000" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pgto_dinheiro" />

            <TextView
                android:id="@+id/txtClientesDia14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fechamento_num_margin"
                android:layout_marginRight="@dimen/fechamento_num_margin"
                android:text="000" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/caixa" />

            <TextView
                android:id="@+id/txtClientesDia9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fechamento_num_margin"
                android:layout_marginRight="@dimen/fechamento_num_margin"
                android:text="000" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btImprimir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/imprimir"
        app:layout_constraintEnd_toStartOf="@+id/btVoltar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbTotalMes" />

    <Button
        android:id="@+id/btVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/voltar"
        app:layout_constraintBottom_toBottomOf="@+id/btImprimir"
        app:layout_constraintEnd_toStartOf="@+id/btSair"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btImprimir"
        app:layout_constraintTop_toTopOf="@+id/btImprimir" />

    <Button
        android:id="@+id/btSair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sair"
        app:layout_constraintBottom_toBottomOf="@+id/btVoltar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btVoltar"
        app:layout_constraintTop_toTopOf="@+id/btVoltar" />

</androidx.constraintlayout.widget.ConstraintLayout>